add update app scale
